--- a/.github/workflows/deploy-to-aws-by-docker.yml
+++ b/.github/workflows/deploy-to-aws-by-docker.yml
@@ -46,7 +46,7 @@ jobs:
         
 
       # 도커 컴포즈 실행하기
-      # 도커 허브에서 jar파일 및 pull후에 컴포즈 up
+      # 도커 허브에서 jar파일 pull
       - name: Deploy to Dev
         uses: appleboy/ssh-action@master
         with:
