--- a/.github/workflows/deploy-to-aws-by-docker.yml
+++ b/.github/workflows/deploy-to-aws-by-docker.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Create PostgreSQL Docker Container
         run: sudo docker run -d -p 5431:5432 --env POSTGRES_DB="${{ secrets.TEST_DATABASE }}" --env POSTGRES_PASSWORD="${{ secrets.TEST_DATASOURCE_PASSWORD }}" postgres:13
 
+      - name: Grant execute permission to gradlew
+        run: chmod +x ./gradlew
+
       # 빌드
       - name: Build with Gradle
         run: ./gradlew clean bootJar
