feat : 프로메테우스 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,13 @@ spring:
       on-profile: local
     import:
       - classpath:trendex-secrets/application-local.yml
+
+
+---
+
+spring:
+  config:
+    activate:
+      on-profile: prod
+    import:
+      - classpath:trendex-secrets/application-prod.yml
