--- a/.github/workflows/deploy-to-aws-by-docker.yml
+++ b/.github/workflows/deploy-to-aws-by-docker.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          submodules: true
         
       # Java version 세팅
       - name: Set up JDK 17
