--- a/.github/workflows/deploy-to-aws-by-docker.yml
+++ b/.github/workflows/deploy-to-aws-by-docker.yml
@@ -17,6 +17,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+          token: ${{ secrets.ACCESS_TOKEN }}
         
       # Java version 세팅
       - name: Set up JDK 17
