--- a/.github/workflows/deploy-to-aws-by-docker.yml
+++ b/.github/workflows/deploy-to-aws-by-docker.yml
@@ -15,9 +15,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        # with:
-        #   submodules: true
-        #   token: ${{ secrets.ACCESS_TOKEN }}
+        with:
+          submodules: true
+          token: ${{ secrets.ACCESS_TOKEN }}
         
       # Java version 세팅
       - name: Set up JDK 17
