--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
     implementation("io.jsonwebtoken:jjwt-api:0.11.5")
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'com.github.maricn:logback-slack-appender:1.6.1'
     runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
     runtimeOnly("io.jsonwebtoken:jjwt-impl:0.11.5")
     runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.11.5")
