refactor : 복사 대상 변경

--- a/build.gradle
+++ b/build.gradle
@@ -66,9 +66,8 @@ tasks.named('asciidoctor') {
 processResources.dependsOn('copySecret')
 
 tasks.register('copySecret', Copy) {
-
     from('./src/main/resources/trendex-secret') {
-        include('*.yml')
+        include('application-prod.yml')
     }
     into('src/main/resources')
 }
