refactor : 복사 대상 변경

--- a/build.gradle
+++ b/build.gradle
@@ -63,8 +63,8 @@ tasks.named('asciidoctor') {
     dependsOn test
 }
 
-processResources.dependsOn('copySecret')
-
+//processResources.dependsOn('copySecret')
+//
 //tasks.register('copySecret', Copy) {
 //    from('./src/main/resources/trendex-secret') {
 //        include('application-prod.yml')
